java5 cleanup